Thu Dec 10 20:55:43 PST 1998 Manish Singh <yosh@gimp.org>

	* esd.c: use nanosleep if we have it, it seems to work better
	(at least for me)

Tue Dec  8 23:32:52 PST 1998 Manish Singh <yosh@gimp.org>

	* Makefile.am
	* configure.in
	* esd-config.in: correctly handle AUDIOFILE_* vars

	* Makefile.am
	* configure.in
	* esddsp.c: use dlsym instead of __func. Now works with glibc 2.1
	and FreeBSD (maybe others? testers wanted)

1998-12-08  Yo Ric Dude  <ricdude@ix.netcom.com>

	* acconfig.h, configure.in, esd-server.h: use autoconf to turn
 	on/off insanely verbose diagnostic information

	* clients.c: improved timeout for select algorithm - if we're
 	recording, return immediately, otherwise timeout after 1/2 an
 	ESD_BUF_SIZE amount of time.

	* esd.c: just use select instead of this nanosleep stuff.

	* samples.c, players.c: fixed problems with looping samples and a
 	pointer assignment warning

Wed Dec  2 11:27:20 EST 1998 The Rasterman  <raster@rasterman.com>

	* clients.c, esd.c, esdlib.c, players.c: Added setsockopt to set the
	socket bufferign options to the minimum needed to keep esd fed with
	audio data to also minimize "lag" with streams. Seems to work fine.

1998-11-30  Jeff Garzik  <jgarzik@pobox.com>

	* configure.in:
	Don't dump environment to stdout.  Every user doesn't need to
	see this data, just a few hackers.

1998-11-28  Yo Ric Dude  <ricdude@ix.netcom.com>

	* players.c, samples.c: swap 16 bit audio data if the server and
	client are on differring endian machines. - not tested! =)
	
	* configure.in: --enable-esdplay has been converted to
 	--with-libaudiofile. some files of the esound source WILL NOT
 	currently compile unless libaudiofile is installed.  with the
 	inclusion of the audio file handling routines, libaudiofile is now
 	a requirement for esound.  Anyone wishing to patch the source so
 	it will still compile without libaudiofile is welcome to.

	* esd.h, esdfile.c, esdplay.c, esdsample.c: add a string to