@@ -134,14 +134,17 @@ extern esd_player_t *esd_monitor_list;
 extern esd_player_t *esd_filter_list;
 void erase_filter( esd_player_t *filter );
 
-void dump_players();
+void dump_players(void);
 void add_player( esd_player_t *player );
 void erase_player( esd_player_t *player );
+void free_player( esd_player_t *player );
+void erase_monitor( esd_player_t *monitor );
+
 esd_player_t *new_stream_player( esd_client_t *client );
 esd_player_t *new_sample_player( int id, int loop );
 
 int read_player( esd_player_t *player );
-void recorder_write();
+void recorder_write(void);
 void monitor_write( void *output_buffer, int length );
 
 /* samples.c - manage the players, recorder, and monitor */
@@ -161,16 +164,16 @@ int mix_and_copy( void *dest_buf, int dest_len,
 	int dest_rate, esd_format_t dest_format, 
 	void *source_data, int src_len, 
 	int src_rate, esd_format_t src_format );
-int mix_from_stereo_16s( void *dest_buf, int dest_len, 
+int mix_from_stereo_16s( void *dest_buf, unsigned int dest_len, 
 	int dest_rate, esd_format_t dest_format, 
 	signed short *source_data_ss, int src_len, int src_rate );
-int mix_from_stereo_8u( void *dest_buf, int dest_len, 
+int mix_from_stereo_8u( void *dest_buf, unsigned int dest_len, 
 	int dest_rate, esd_format_t dest_format, 
 	unsigned char *source_data_uc, int src_len, int src_rate );
-int mix_from_mono_16s( void *dest_buf, int dest_len, 
+int mix_from_mono_16s( void *dest_buf, unsigned int dest_len, 
 	int dest_rate, esd_format_t dest_format, 
 	signed short *source_data_ss, int src_len, int src_rate );
-int mix_from_mono_8u( void *dest_buf, int dest_len, 
+int mix_from_mono_8u( void *dest_buf, unsigned int dest_len, 
 	int dest_rate, esd_format_t dest_format, 
 	unsigned char *source_data_uc, int src_len, int src_rate );
 int mix_players_16s( void *mixed, int length );
